# tg-load

./: .gcloudignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  app.py  commands.txt  config.toml  pyproject.toml  set_commands.py  tg_load.py
.github/: dependabot.yml
src/tg_load/: __main__.py  featurestate.py  globals.py  preference.py  set_commands.py  tg_load.py  utils.py
src/tg_load/settings/: commands.default.txt  commands.txt  config.default.toml  config.toml
